--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title> MAZE </title>
+  <title> MaZE </title>
 </head>
 
 <body>
-  <h1> MAZE </h1>
+  <h1> MeZE </h1>
 <p> helloooooo world </p>
  
 </body>
